--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -57,6 +57,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="ghf-fy-wpx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="San-8X-eiY" secondAttribute="leading" constant="20" symbolic="YES" id="0TX-jf-i4B"/>
                                     <constraint firstAttribute="trailing" secondItem="ghf-fy-wpx" secondAttribute="trailing" constant="8" id="D3l-tf-sSd"/>
                                     <constraint firstAttribute="height" constant="94" id="SIs-mA-IdD"/>
                                     <constraint firstAttribute="bottom" secondItem="ghf-fy-wpx" secondAttribute="bottom" constant="7" id="ZKf-T8-RvJ"/>
@@ -313,6 +314,7 @@
                             <constraint firstItem="9Fn-ZY-t5U" firstAttribute="centerX" secondItem="rGU-Ax-wKq" secondAttribute="centerX" id="vqx-OX-Ad3"/>
                             <constraint firstItem="3E1-3i-z73" firstAttribute="top" secondItem="kEV-L1-7n0" secondAttribute="bottom" constant="22" id="wLs-ME-YMi"/>
                             <constraint firstItem="rGU-Ax-wKq" firstAttribute="top" secondItem="San-8X-eiY" secondAttribute="top" constant="50" id="xQa-d4-gS0"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t9R-Zo-56p" secondAttribute="trailing" constant="20" symbolic="YES" id="zXu-9y-ZFK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rGU-Ax-wKq"/>
                     </view>
@@ -392,7 +394,7 @@
                                             <action selector="backButtonAction:" destination="tB3-S2-i7E" eventType="touchUpInside" id="xHq-lg-3i3"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i2Y-qK-IkM">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i2Y-qK-IkM">
                                         <rect key="frame" x="330" y="57" width="37" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="MXh-a7-YMo"/>
@@ -421,6 +423,7 @@
                                     <constraint firstAttribute="bottom" secondItem="i2Y-qK-IkM" secondAttribute="bottom" constant="7" id="10h-dd-8Ub"/>
                                     <constraint firstAttribute="height" constant="94" id="fHj-cK-nSD"/>
                                     <constraint firstAttribute="trailing" secondItem="i2Y-qK-IkM" secondAttribute="trailing" constant="8" id="swE-gW-ymV"/>
+                                    <constraint firstItem="i2Y-qK-IkM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Rcj-cG-sJQ" secondAttribute="leading" constant="20" symbolic="YES" id="z7X-2A-4FU"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fKC-ed-YZT" userLabel="Holder View">
