--- a/IPSX/Storyboard/Base.lproj/Landing.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Landing.storyboard
@@ -43,7 +43,7 @@ Accepted currency: ether</string>
                                         <rect key="frame" x="45.5" y="54" width="284" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="aEZ-8f-FkF"/>
-                                            <constraint firstAttribute="width" constant="284" id="oX5-Nh-08q"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="oX5-Nh-08q"/>
                                         </constraints>
                                         <state key="normal" title="Login">
                                             <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -78,7 +78,7 @@ Accepted currency: ether</string>
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="kCB-he-W31" firstAttribute="trailing" secondItem="ugu-Hv-Kee" secondAttribute="trailing" id="4ld-6O-Wo7"/>
+                                    <constraint firstItem="kCB-he-W31" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ugu-Hv-Kee" secondAttribute="trailing" id="4ld-6O-Wo7"/>
                                     <constraint firstItem="kCB-he-W31" firstAttribute="leading" secondItem="ugu-Hv-Kee" secondAttribute="leading" id="89B-iF-QvM"/>
                                     <constraint firstAttribute="bottom" secondItem="ugu-Hv-Kee" secondAttribute="bottom" constant="65" id="MNm-yY-Rfx"/>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="centerX" secondItem="MRN-Ud-kuM" secondAttribute="centerX" id="ahN-Gd-OY7"/>
