--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="45" y="586" width="285" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Dd6-Pg-mbF"/>
-                                    <constraint firstAttribute="width" constant="285" id="lwO-f9-d2r"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="285" id="lwO-f9-d2r"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="tintColor" red="0.16862745098039217" green="0.51399999860000001" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -53,6 +53,13 @@
                                     <segue destination="yRO-NU-ykG" kind="show" id="wMs-1I-VSf"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTH-f1-mMr" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.3009187940140845" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="Fjx-DL-Iqc"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDt-vf-HrN" userLabel="Top Bar">
                                 <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
                                 <subviews>
@@ -60,13 +67,6 @@
                                         <rect key="frame" x="135" y="62" width="105" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTH-f1-mMr" userLabel="Separator">
-                                        <rect key="frame" x="0.0" y="93" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="0.5" id="b53-km-WLf"/>
-                                        </constraints>
-                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THk-VM-aCB">
                                         <rect key="frame" x="8" y="50" width="44" height="44"/>
                                         <constraints>
@@ -86,12 +86,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="QTH-f1-mMr" firstAttribute="leading" secondItem="IDt-vf-HrN" secondAttribute="leading" id="42e-iD-9Ld"/>
-                                    <constraint firstAttribute="bottom" secondItem="QTH-f1-mMr" secondAttribute="bottom" id="827-OR-eHy"/>
                                     <constraint firstAttribute="bottom" secondItem="THk-VM-aCB" secondAttribute="bottom" id="P0E-IB-i4x"/>
                                     <constraint firstItem="THk-VM-aCB" firstAttribute="leading" secondItem="IDt-vf-HrN" secondAttribute="leading" constant="8" id="gcP-5W-iZU"/>
                                     <constraint firstAttribute="height" constant="94" id="mam-AX-pDZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="QTH-f1-mMr" secondAttribute="trailing" id="nhv-24-Avc"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="THk-VM-aCB" secondAttribute="trailing" constant="20" symbolic="YES" id="sIx-kS-CHG"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login with email or facebook" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E3V-S1-mjQ">
@@ -109,25 +107,29 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xWE-ka-htc" secondAttribute="trailing" constant="20" symbolic="YES" id="1S4-c9-uY9"/>
+                            <constraint firstItem="QTH-f1-mMr" firstAttribute="top" secondItem="IDt-vf-HrN" secondAttribute="bottom" id="ANj-Mf-9gX"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="trailing" secondItem="nnt-XC-RHm" secondAttribute="trailing" id="BBQ-aK-Wv6"/>
-                            <constraint firstItem="5c7-TE-Gj8" firstAttribute="width" secondItem="RG0-PZ-h1M" secondAttribute="width" id="DIL-n2-RGI"/>
+                            <constraint firstItem="5c7-TE-Gj8" firstAttribute="width" relation="greaterThanOrEqual" secondItem="RG0-PZ-h1M" secondAttribute="width" id="DIL-n2-RGI"/>
                             <constraint firstItem="RG0-PZ-h1M" firstAttribute="top" secondItem="5c7-TE-Gj8" secondAttribute="bottom" constant="15" id="Grk-Kc-1aR"/>
                             <constraint firstItem="E3V-S1-mjQ" firstAttribute="top" secondItem="xWE-ka-htc" secondAttribute="bottom" constant="20" id="O6a-l4-2O7"/>
                             <constraint firstItem="RG0-PZ-h1M" firstAttribute="centerX" secondItem="Vkr-YJ-wId" secondAttribute="centerX" id="ReH-Ft-RtU"/>
                             <constraint firstItem="E3V-S1-mjQ" firstAttribute="centerX" secondItem="5c7-TE-Gj8" secondAttribute="centerX" id="fZa-yU-Sj8"/>
-                            <constraint firstItem="E3V-S1-mjQ" firstAttribute="leading" secondItem="5c7-TE-Gj8" secondAttribute="leading" id="gle-vt-6Xb"/>
+                            <constraint firstItem="QTH-f1-mMr" firstAttribute="leading" secondItem="Vkr-YJ-wId" secondAttribute="leading" id="gbq-Ti-zYS"/>
+                            <constraint firstItem="E3V-S1-mjQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5c7-TE-Gj8" secondAttribute="leading" id="gle-vt-6Xb"/>
                             <constraint firstItem="nnt-XC-RHm" firstAttribute="leading" secondItem="Vkr-YJ-wId" secondAttribute="leading" id="hOn-wp-jAt"/>
                             <constraint firstItem="xWE-ka-htc" firstAttribute="top" secondItem="IDt-vf-HrN" secondAttribute="bottom" constant="24" id="hef-rB-v3u"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="top" secondItem="IDt-vf-HrN" secondAttribute="top" constant="50" id="jrN-la-8G8"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="trailing" secondItem="IDt-vf-HrN" secondAttribute="trailing" id="mLG-NZ-vDv"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="top" secondItem="nnt-XC-RHm" secondAttribute="top" constant="20" id="pPV-Qj-NAp"/>
+                            <constraint firstItem="Vkr-YJ-wId" firstAttribute="trailing" secondItem="QTH-f1-mMr" secondAttribute="trailing" id="qcv-Hf-mcz"/>
                             <constraint firstItem="5c7-TE-Gj8" firstAttribute="height" secondItem="RG0-PZ-h1M" secondAttribute="height" id="rWs-hc-O8e"/>
                             <constraint firstItem="IDt-vf-HrN" firstAttribute="leading" secondItem="Vkr-YJ-wId" secondAttribute="leading" id="sS2-Wp-EOM"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="bottom" secondItem="nnt-XC-RHm" secondAttribute="bottom" id="svu-xe-1fc"/>
                             <constraint firstItem="5c7-TE-Gj8" firstAttribute="centerX" secondItem="RG0-PZ-h1M" secondAttribute="centerX" id="vPZ-rz-m9y"/>
                             <constraint firstItem="xWE-ka-htc" firstAttribute="leading" secondItem="E3V-S1-mjQ" secondAttribute="leading" id="xy4-93-O0t"/>
                             <constraint firstItem="Vkr-YJ-wId" firstAttribute="bottom" secondItem="RG0-PZ-h1M" secondAttribute="bottom" constant="37" id="yqs-xn-nsX"/>
-                            <constraint firstItem="E3V-S1-mjQ" firstAttribute="trailing" secondItem="5c7-TE-Gj8" secondAttribute="trailing" id="zbU-ik-c4Y"/>
+                            <constraint firstItem="E3V-S1-mjQ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5c7-TE-Gj8" secondAttribute="trailing" id="zbU-ik-c4Y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Vkr-YJ-wId"/>
                     </view>
@@ -275,7 +277,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5J-cg-8LK">
                                 <rect key="frame" x="159" y="307" width="170" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="170" id="4Uo-cg-f9B"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="4Uo-cg-f9B"/>
                                     <constraint firstAttribute="height" constant="36" id="v6Z-XA-fzH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -290,7 +292,7 @@
                                 <rect key="frame" x="45.5" y="586" width="284" height="44"/>
                                 <color key="backgroundColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="284" id="Nov-ZO-dqx"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="Nov-ZO-dqx"/>
                                     <constraint firstAttribute="height" constant="44" id="WCl-Tl-tRj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -304,6 +306,13 @@
                                     <action selector="loginButtonAction:" destination="yRO-NU-ykG" eventType="touchUpInside" id="vDd-Vc-ubg"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ziu-Gm-gNo" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30061619718309857" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="par-Kw-idz"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5IV-4B-Hec" userLabel="Top Bar">
                                 <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
                                 <subviews>
@@ -327,13 +336,6 @@
                                     <constraint firstAttribute="height" constant="94" id="TVV-jc-Mp1"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ziu-Gm-gNo" userLabel="Separator">
-                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
-                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="par-Kw-idz"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdW-3J-azh" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
                                 <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -349,10 +351,12 @@
                             <constraint firstItem="hdW-3J-azh" firstAttribute="centerX" secondItem="deU-ul-WPh" secondAttribute="centerX" id="8em-vG-eWx"/>
                             <constraint firstItem="sVm-tX-9G9" firstAttribute="leading" secondItem="Maw-Yi-yPf" secondAttribute="leading" id="DEa-Vu-QVf"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="bottom" secondItem="rF7-LN-NfW" secondAttribute="bottom" constant="37" id="ERF-sR-gSa"/>
+                            <constraint firstItem="M5J-cg-8LK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="IQS-qV-MEC" secondAttribute="leading" constant="20" symbolic="YES" id="F24-UO-TRT"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="trailing" secondItem="5IV-4B-Hec" secondAttribute="trailing" id="F2W-Nc-gXv"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="top" secondItem="YpF-L5-t2s" secondAttribute="top" constant="20" id="Fnx-g8-Zq9"/>
                             <constraint firstItem="5IV-4B-Hec" firstAttribute="leading" secondItem="deU-ul-WPh" secondAttribute="leading" id="H7g-rG-dTg"/>
                             <constraint firstItem="Maw-Yi-yPf" firstAttribute="top" secondItem="sVm-tX-9G9" secondAttribute="bottom" constant="38" id="J2V-Wo-7Ei"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sVm-tX-9G9" secondAttribute="trailing" constant="20" symbolic="YES" id="MGL-ea-MoN"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="top" secondItem="5IV-4B-Hec" secondAttribute="top" constant="50" id="R4T-3i-oz5"/>
                             <constraint firstItem="YpF-L5-t2s" firstAttribute="leading" secondItem="deU-ul-WPh" secondAttribute="leading" id="Rwe-Sb-GfM"/>
                             <constraint firstItem="ziu-Gm-gNo" firstAttribute="leading" secondItem="5IV-4B-Hec" secondAttribute="leading" id="SNq-nd-NHR"/>
@@ -463,7 +467,7 @@
                                 <rect key="frame" x="89" y="232" width="240" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="G69-uh-lMS"/>
-                                    <constraint firstAttribute="width" constant="240" id="NBl-OW-5BN"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="NBl-OW-5BN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Already have an account? Login">
@@ -508,7 +512,7 @@
                                 <color key="backgroundColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="ltO-qn-iFU"/>
-                                    <constraint firstAttribute="width" constant="284" id="sYr-Nv-b0u"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="sYr-Nv-b0u"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Send Password Reset Link">
@@ -549,6 +553,8 @@
                             <constraint firstItem="BZf-gw-FXf" firstAttribute="centerY" secondItem="nCy-GT-MJK" secondAttribute="centerY" id="lDF-FR-wKS"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="A3O-NY-cF5" secondAttribute="trailing" id="lkc-sG-gFR"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="top" constant="50" id="nbX-uY-0wj"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ij5-YA-s4T" secondAttribute="trailing" constant="20" symbolic="YES" id="qPZ-rr-NcE"/>
+                            <constraint firstItem="GjQ-VO-LVy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1AX-CG-TZd" secondAttribute="leading" constant="20" symbolic="YES" id="qZO-44-ZWl"/>
                             <constraint firstItem="ij5-YA-s4T" firstAttribute="top" secondItem="cRV-Xq-2Wd" secondAttribute="bottom" priority="750" constant="23" id="rS3-1K-vCu"/>
                             <constraint firstItem="A3O-NY-cF5" firstAttribute="leading" secondItem="nCy-GT-MJK" secondAttribute="leading" id="vCF-AN-9em"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="QOC-Kv-ctQ" secondAttribute="trailing" id="vQb-Ax-Fpk"/>
