--- a/IPSX/Flows/Register/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -116,7 +116,7 @@
                                 <rect key="frame" x="45.5" y="302.5" width="84" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="hIx-JR-ILr"/>
-                                    <constraint firstAttribute="width" constant="84" id="xqi-BW-c8S"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="xqi-BW-c8S"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="   Paste" image="clipboard">
@@ -129,7 +129,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cvd-tE-d63">
                                 <rect key="frame" x="137" y="295" width="84" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="84" id="Ixc-pB-laF"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="Ixc-pB-laF"/>
                                     <constraint firstAttribute="height" constant="44" id="YLS-2V-Fni"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -169,6 +169,7 @@
                                     <constraint firstAttribute="bottom" secondItem="0pm-zp-CjR" secondAttribute="bottom" id="0ZC-Cm-5K8"/>
                                     <constraint firstAttribute="height" constant="94" id="4tr-jb-X1W"/>
                                     <constraint firstAttribute="trailing" secondItem="0pm-zp-CjR" secondAttribute="trailing" constant="8" id="Fqg-MC-qmC"/>
+                                    <constraint firstItem="0pm-zp-CjR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8jc-bn-Gqf" secondAttribute="leading" constant="20" symbolic="YES" id="ued-D1-ERZ"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8zd-6m-2Oq" userLabel="Separator">
@@ -182,7 +183,7 @@
                                 <rect key="frame" x="45.5" y="586" width="284" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="284" id="7aR-kD-VCk"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="7aR-kD-VCk"/>
                                     <constraint firstAttribute="height" constant="44" id="x1n-4g-f5c"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -212,6 +213,8 @@
                             <constraint firstItem="cE3-m5-koF" firstAttribute="centerX" secondItem="a3H-xu-1tI" secondAttribute="centerX" id="IyD-pE-KMp"/>
                             <constraint firstItem="qa5-bk-98A" firstAttribute="leading" secondItem="cE3-m5-koF" secondAttribute="leading" id="J6J-Rg-HAh"/>
                             <constraint firstItem="a3H-xu-1tI" firstAttribute="bottom" secondItem="Tgh-m3-8jj" secondAttribute="bottom" id="JfG-Uu-Qwn"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="qa5-bk-98A" secondAttribute="trailing" constant="20" symbolic="YES" id="JvV-Yb-wi6"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Cvd-tE-d63" secondAttribute="trailing" constant="20" symbolic="YES" id="LSo-3d-ajD"/>
                             <constraint firstItem="a3H-xu-1tI" firstAttribute="top" secondItem="Tgh-m3-8jj" secondAttribute="top" constant="20" id="P19-QU-a4N"/>
                             <constraint firstItem="8zd-6m-2Oq" firstAttribute="top" secondItem="8jc-bn-Gqf" secondAttribute="bottom" id="QRs-td-EbI"/>
                             <constraint firstItem="wmp-PV-9k1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cE3-m5-koF" secondAttribute="bottom" constant="20" id="Qke-Au-NML"/>
@@ -307,6 +310,7 @@
                                     <constraint firstItem="Rhm-18-oXD" firstAttribute="leading" secondItem="ary-xX-MEV" secondAttribute="leading" id="LlV-cN-WIB"/>
                                     <constraint firstAttribute="trailing" secondItem="Rhm-18-oXD" secondAttribute="trailing" id="sb7-lQ-frd"/>
                                     <constraint firstAttribute="bottom" secondItem="tgw-Ls-nkT" secondAttribute="bottom" id="yAK-Bb-FMk"/>
+                                    <constraint firstItem="tgw-Ls-nkT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ary-xX-MEV" secondAttribute="leading" constant="20" symbolic="YES" id="zXm-pt-dfP"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You're officially member of our community." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yU7-rU-aRV">
@@ -327,7 +331,6 @@
                         <constraints>
                             <constraint firstItem="ZSc-ve-Cog" firstAttribute="leading" secondItem="mtG-lB-exG" secondAttribute="leading" id="5og-yg-EKs"/>
                             <constraint firstItem="mtG-lB-exG" firstAttribute="trailing" secondItem="yU7-rU-aRV" secondAttribute="trailing" constant="26" id="6qR-W5-Mv9"/>
-                            <constraint firstItem="yU7-rU-aRV" firstAttribute="leading" secondItem="mtG-lB-exG" secondAttribute="leading" constant="26" id="8m7-fZ-uSG"/>
                             <constraint firstItem="mtG-lB-exG" firstAttribute="trailing" secondItem="ZSc-ve-Cog" secondAttribute="trailing" id="AQ3-03-IQ2"/>
                             <constraint firstItem="y67-Z0-5Gu" firstAttribute="centerX" secondItem="a2M-Wb-Qaa" secondAttribute="centerX" id="DEE-0A-2rP"/>
                             <constraint firstItem="a2M-Wb-Qaa" firstAttribute="centerY" secondItem="mtG-lB-exG" secondAttribute="centerY" id="Fxx-XE-v7b"/>
@@ -492,7 +495,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcK-Af-JEh">
                                 <rect key="frame" x="15" y="252.5" width="84" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="84" id="6s0-wi-6hY"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="6s0-wi-6hY"/>
                                     <constraint firstAttribute="height" constant="30" id="8VI-dP-Bzt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -543,6 +546,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="ng7-n6-rRs" secondAttribute="trailing" constant="8" id="Dnu-jD-55M"/>
+                                    <constraint firstItem="ng7-n6-rRs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pSE-cg-4Dr" secondAttribute="leading" constant="20" symbolic="YES" id="RS7-1g-yHp"/>
                                     <constraint firstAttribute="bottom" secondItem="ng7-n6-rRs" secondAttribute="bottom" id="hn9-7G-e1y"/>
                                     <constraint firstAttribute="height" constant="94" id="rfs-t2-TAj"/>
                                 </constraints>
@@ -558,7 +562,7 @@
                                 <rect key="frame" x="107" y="245.5" width="84" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="bl6-pq-ioI"/>
-                                    <constraint firstAttribute="width" constant="84" id="jMB-z9-hFa"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="jMB-z9-hFa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="   QR Code" image="QrCodeSmall">
@@ -585,6 +589,7 @@
                             <constraint firstItem="dTD-By-icE" firstAttribute="height" secondItem="ZRe-2w-gCy" secondAttribute="height" id="BmL-wy-deG"/>
                             <constraint firstItem="La0-Dw-ufx" firstAttribute="centerY" secondItem="VcK-Af-JEh" secondAttribute="centerY" id="EbD-YV-EfY"/>
                             <constraint firstItem="ZRe-2w-gCy" firstAttribute="leading" secondItem="ldT-jy-L68" secondAttribute="leading" constant="15" id="EdM-vt-HIX"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="La0-Dw-ufx" secondAttribute="trailing" constant="20" symbolic="YES" id="H36-1Z-RCI"/>
                             <constraint firstItem="pSE-cg-4Dr" firstAttribute="leading" secondItem="ldT-jy-L68" secondAttribute="leading" id="Mwk-gE-ztL"/>
                             <constraint firstItem="Mmt-lK-1sd" firstAttribute="trailing" secondItem="pSE-cg-4Dr" secondAttribute="trailing" id="Nee-RY-8fB"/>
                             <constraint firstItem="dTD-By-icE" firstAttribute="centerY" secondItem="ZRe-2w-gCy" secondAttribute="centerY" id="Of8-gK-031"/>
@@ -599,6 +604,7 @@
                             <constraint firstItem="ZRe-2w-gCy" firstAttribute="centerX" secondItem="ldT-jy-L68" secondAttribute="centerX" id="i6t-rd-uNK"/>
                             <constraint firstItem="c8w-7z-z2N" firstAttribute="top" secondItem="Mmt-lK-1sd" secondAttribute="bottom" priority="750" constant="26" id="ji1-Pq-7fB"/>
                             <constraint firstItem="ldT-jy-L68" firstAttribute="trailing" secondItem="ZRe-2w-gCy" secondAttribute="trailing" constant="15" id="kVd-8i-IGI"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="c8w-7z-z2N" secondAttribute="trailing" constant="20" symbolic="YES" id="mkp-pJ-3Gd"/>
                             <constraint firstItem="VcK-Af-JEh" firstAttribute="top" secondItem="ZRe-2w-gCy" secondAttribute="bottom" id="s4C-Q5-qf7"/>
                             <constraint firstItem="Mmt-lK-1sd" firstAttribute="leading" secondItem="pSE-cg-4Dr" secondAttribute="leading" id="tVx-c3-HSB"/>
                             <constraint firstItem="c8w-7z-z2N" firstAttribute="leading" secondItem="ZRe-2w-gCy" secondAttribute="leading" id="wXo-pH-Vvo"/>
