--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -238,8 +238,9 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="PSQ-5O-SSB">
-                                        <rect key="frame" x="119" y="11" width="137" height="29"/>
+                                        <rect key="frame" x="67" y="11" width="241" height="29"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="241" id="hoz-mg-qMH"/>
                                             <constraint firstAttribute="height" constant="28" id="l2d-bw-eYe"/>
                                         </constraints>
                                         <segments>
