Add UI elements for testin enrolment

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -765,6 +765,14 @@
             </objects>
             <point key="canvasLocation" x="2622" y="922"/>
         </scene>
+        <!--EnrolTesting-->
+        <scene sceneID="5Tl-oK-6Ba">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EnrolTesting" id="sXt-2s-6Qg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2ne-4F-IQ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2583" y="1006"/>
+        </scene>
         <!--Profile-->
         <scene sceneID="e5X-ZR-dkq">
             <objects>
@@ -957,9 +965,19 @@
                                                     <rect key="frame" x="19" y="18" width="30" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3F-oO-1zn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="345" height="67"/>
+                                                    <connections>
+                                                        <segue destination="sXt-2s-6Qg" kind="show" id="x1N-Wf-OOW"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="g3F-oO-1zn" firstAttribute="top" secondItem="gtm-IY-N6q" secondAttribute="top" id="CIS-ec-dc5"/>
+                                                <constraint firstAttribute="bottom" secondItem="g3F-oO-1zn" secondAttribute="bottom" id="ME2-r1-vAv"/>
+                                                <constraint firstAttribute="trailing" secondItem="g3F-oO-1zn" secondAttribute="trailing" id="MYk-dh-dnC"/>
+                                                <constraint firstItem="g3F-oO-1zn" firstAttribute="leading" secondItem="gtm-IY-N6q" secondAttribute="leading" id="U3d-kg-MQp"/>
                                                 <constraint firstAttribute="height" constant="67" id="f8b-7f-1iM"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
